@@ -9,6 +9,8 @@ Changes
 * zloop works with zmq_pollitem_t * instead of void * sockets; allows
   use of native FDs in reactor as well as 0MQ sockets.
 
+* Added zmsg_content_size method to report full content size of message.
+
 
 czmq version 1.0.0 (stable), released on 2011/04/26
 ===================================================
